--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
         </div>
     </div>
     <div class="box" style="height:16px"></div>
-    <div class="box">
+    <div class="col-lg-12 box">
       <div class="footer">
         <p>Busiyi手作diy 2018 © Copyright All Rights Reserved. </p>
       </div>
-</div>
+    </div>
    
     
      
